<resources>
    <string name="app_name">StatePatternPractice</string>
    <string name="connection_state_machine">Connection State Machine</string>
    <string name="rest_state_machine">REST State Machine</string>
    <string name="routing_state_machine">Routing State Machine</string>
    <string name="monitor_state_machine">Monitor State Machine</string>
    <string name="priority_state_machine">Priority State Machine</string>
    <string name="bandwidth_state_machine">Bandwidth State Machine</string>
    <string name="cooperated_state_machine">Cooperated State Machine</string>
    <string name="switch_connected">Switch Connected</string>
    <string name="switch_disconnected">Switch Disconnected</string>
    <string name="hello">Hello</string>
    <string name="feature">Feature</string>
    <string name="timeout">TimeOut</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="system_status_request">System Status Request</string>
    <string name="system_status_reply">System Status Reply</string>
    <string name="routing_request">Routing Request</string>
    <string name="table_registration">Table Registration</string>
    <string name="flooding">Flooding</string>
    <string name="routing_reply">Routing Reply</string>
    <string name="monitoring_request">Monitoring Request</string>
    <string name="monitoring_reply">Monitoring Reply</string>
    <string name="guarantee_bandwidth_modification_request">Guarantee Bandwidth Modification Request</string>
    <string name="bandwidth_usage_report_request">Bandwidth Usage Report Request</string>
    <string name="bandwidth_usage_report_reply">Bandwidth Usage Report Reply</string>
    <string name="guarantee_bandwidth_modification_reply">Guarantee Bandwidth Modification Reply</string>
    <string name="congestion_prediction_request">Congestion Prediction Request</string>
    <string name="port_usage_report_request">Port Usage Report Request</string>
    <string name="port_usage_report_reply">Port Usage Report Reply</string>
    <string name="bandwidth_limitation">Bandwidth Limitation</string>
    <string name="congestion_prediction_reply">Congestion Prediction Reply</string>
    <string name="outport_modification_request">OutPort Modification Request</string>
    <string name="port_information_request">Port Information Request</string>
    <string name="port_information_reply">Port Information Reply</string>
    <string name="outport_modification_reply">OutPort Modification Reply</string>
</resources>
