<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yuzumone.statepatternpractice.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <Button
            android:id="@+id/button_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_state_machine"
            />

        <Button
            android:id="@+id/button_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rest_state_machine"
            />

        <Button
            android:id="@+id/button_routing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routing_state_machine"
            />

        <Button
            android:id="@+id/button_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monitor_state_machine"
            />

        <Button
            android:id="@+id/button_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority_state_machine"
            />

        <Button
            android:id="@+id/button_bandwidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bandwidth_state_machine"
            />

        <Button
            android:id="@+id/button_cooperated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cooperated_state_machine"
            />
    </LinearLayout>
</layout>