<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yuzumone.statepatternpractice.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <Button
            android:id="@+id/button_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_connected"
            />

        <Button
            android:id="@+id/button_disconnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_disconnected"
            />

        <Button
            android:id="@+id/button_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            />

        <Button
            android:id="@+id/button_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature"
            />

        <Button
            android:id="@+id/button_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeout"
            />

        <Button
            android:id="@+id/button_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            />

        <Button
            android:id="@+id/button_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</layout>