<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yuzumone.statepatternpractice.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <Button
            android:id="@+id/button_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routing_request"
            />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/table_registration"
            />

        <Button
            android:id="@+id/button_flooding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flooding"
            />

        <Button
            android:id="@+id/button_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routing_reply"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</layout>