<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yuzumone.statepatternpractice.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <Button
            android:id="@+id/button_modification_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outport_modification_request"
            />

        <Button
            android:id="@+id/button_information_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/port_information_request"
            />

        <Button
            android:id="@+id/button_information_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/port_information_reply"
            />

        <Button
            android:id="@+id/button_modification_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outport_modification_reply"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</layout>